# rsnake

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  math.rs  settings.rs  square.rs
